# mopidy-vkm

./: .clineignore  .clinerules  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  justfile  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  initialize-command.sh  on-create-command.sh  post-create-command.sh  post-start.sh  project.zshrc  readme.md  user.zsh.template
docs/: development.md
js-tools/: package-lock.json  package.json
memory-bank/: activeContext.ad  activeContext.md  authContext.ad  authContext.md  devcontainerConfigContext.ad  devcontainerConfigContext.md  productContext.ad  productContext.md  progress.ad  progress.md  projectBrief.ad  projectBrief.md  systemPatterns.ad  systemPatterns.md  techContext.ad  techContext.md  testContext.ad  testContext.md  webHandlersContext.ad  webHandlersContext.md
src/modipy_vkm/: backend.py  ext.conf
src/modipy_vkm/web/: __init__.py  app.py
src/mopidy_vkm/: __init__.py  backend.py  ext.conf
src/mopidy_vkm/auth/: __init__.py  credentials.py  handlers.py  service.py  status.py  token.py
src/mopidy_vkm/auth/data/: user_agents.json
src/mopidy_vkm/web/: app.py  handlers.py
src/mopidy_vkm/web/templates/vkm/: index.html
tests/: __init__.py  test_auth.py  test_web.py
